[package]
name = "simple-dh-msg"
version = "0.1.0"
edition = "2021"
author = "SuperHacker"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
base64 = "0.13.0"
num-bigint = "0.4.3"
num-prime = "0.2.0"
rand = "0.8.5"